Chore: fix footer position on small screens (#132)

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -14,7 +14,7 @@
   flex-flow: column nowrap;
   align-items: flex-start;
 
-  @media screen and (min-height: 750px) {
+  @media screen and (min-width: 768px) and (min-height: 625px) {
     position: fixed;
   }
 
@@ -34,7 +34,7 @@
   justify-content: center;
   flex-flow: column nowrap;
   gap: var(--default-padding);
-  padding: var(--default-padding) var(--default-padding) 4rem;
+  padding: 2rem var(--default-padding);
   width: 100%;
   max-width: 60ch;
   margin: 0 auto;
